--- a/index.html
+++ b/index.html
@@ -1,3 +1,112 @@
-<h2>
-WELCOME 
-</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Greenply</title>
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+<div class="header_section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><a href="http://greenplyplywood.com/" target="_blank"><img src="images/logo.png" alt="logo"></a></div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 texture_icon"><img src="images/texture_icon.png" alt=""></div>
+    </div>
+  </div>
+</div>
+<div class="banner-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 banner_pic_terms_c"><img src="images/banner_pic.png" alt=""></div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 banner_text1">
+          <h2> This #DurgaPuja,<br/>
+            let’s come together and bask in
+            the sound of music.</h2>
+          <h3> Participate in <span> #PlyeyPujorShur </span> and stand a chance to win
+            exciting goodies. #Greenply. </h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="video_section">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 video_bg">
+      <ul class="video_inn">
+        <li><img src="images/video_sec_texture.png" alt=""></li>
+        <li>
+          <iframe width="500" height="315" src="https://www.youtube.com/embed/GKwpvovaTW0" frameborder="0" allowfullscreen></iframe>
+        </li>
+        <li><img src="images/video_sec_texture2.png" alt=""></li>
+      </ul>
+      <ul class="video_inn_mobile">
+        <li><img src="images/video_sec_texture.png" alt=""></li>
+        <li>
+          <iframe width="100%" height="300" src="https://www.youtube.com/embed/GKwpvovaTW0" frameborder="0" allowfullscreen></iframe>
+        </li>
+        <li><img src="images/video_sec_texture2.png" alt=""></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="bdy_section1">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list_area1">
+        <h2>Follow these 5 simple steps to participate :</h2>
+        <ul class="listing_section2">
+          <li><span>Step 1</span> Using any non musical instrument (eg: a wooden surface), record the same music as mentioned in the greenply video.</li>
+          <li><span>Step 2</span> Share the same on your Facebook profile.</li>
+          <li><span>Step 3</span>Tag @GreenplyPlywood.</li>
+          <li><span>Step 4</span> Hashtag the status with #PlyeyPujorShur #Greenply.</li>
+          <li><span>Step 5</span>Make the status ‘public’.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list_area2">
+        <h2>NOTE: We will be declaring the winners in two parts</h2>
+        <ul class="listing_section">
+          <li>1.On 22nd Sep : From the first 10 participants, we will be choosing 2 winners who will be given a chance to play the same music (as
+            uploaded by them for the Greenply contest) in front of KKR players</li>
+          <li>2. On 10th Oct: The next set of winners will be declared and will stand a chance to win KKR merchandise. Winners will be decided on the basis of the music shared, proper hashtags used and Greenply tag. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="footer_section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 note-text">
+        <h2> NOTE: </h2>
+        <p>Winners will be decided on the basis of the music shared, proper hashtags used and Greenply tag. </p>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ft_pic"> <img src="images/footer_texture.png" alt=""> </div>
+    </div>
+  </div>
+</div>
+<div class="footer_copyright_section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <ul class="flink">
+          <li>Contest ends on <span> 5th Oct, 7.00 pm IST.</span></li>
+          <li>Also, read <a href="terms_conditions.html">terms & conditions.</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
